src/test/ui/lifetime-errors/ex3-both-anon-regions-3.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-3.rs:12:9
   |
11 | fn foo((v, w): (&u8, &u8), (x, y): (&u8, &u8)) {
   |                 ---                 --- these references are not declared with the same lifetime...
12 |     v = x;
   |         ^ ...but data flows here

error: aborting due to previous error

